log
Thu Mar 26 06:58:35 PM UTC 2026: 
 list.c | 75 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++------
 1 file changed, 69 insertions(+), 6 deletions(-)
 tests:  12|0
total_score: 60/60
a909855
Thu Mar 26 07:01:23 PM UTC 2026: 
 tests:  12|0
total_score: 60/60
38a6e17
Thu Mar 26 07:05:13 PM UTC 2026: 
 list.c | 75 ++++++------------------------------------------------------------
 1 file changed, 6 insertions(+), 69 deletions(-)
 tests:  0|6
total_score: 0/60
5b7aee6
Thu Mar 26 07:20:25 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
9353a89
Thu Mar 26 07:22:28 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
4ec1f83
Thu Mar 26 07:23:53 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/60
de66514
Thu Mar 26 07:24:59 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
35a3409
Thu Mar 26 07:37:45 PM UTC 2026: 
 list.c | 21 ++++++++++++++++++---
 1 file changed, 18 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:93:53: error: ‘next’ undeclared (first use in this function)
   93 |     if(list->current->prev == NULL && list->current-next != NULL) {
      |                                                     ^~~~
list.c:93:53: note: each undeclared identifier is reported only once for each function it appears in
1fc0cda
Thu Mar 26 07:38:17 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:99:53: error: ‘next’ undeclared (first use in this function)
   99 |     if(list->current->prev != NULL && list->current-next != NULL) {
      |                                                     ^~~~
list.c:99:53: note: each undeclared identifier is reported only once for each function it appears in
099170b
Thu Mar 26 07:38:31 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/60
53b46dd
Thu Mar 26 07:41:11 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|6
total_score: 0/60
b25eee2
Thu Mar 26 07:42:14 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/60
f5f902f
Thu Mar 26 07:45:04 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/60
fc3f730
Thu Mar 26 07:45:21 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
07f41ca
Thu Mar 26 07:46:24 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
a50c6a6
Thu Mar 26 07:52:41 PM UTC 2026: 
 tests:  1|5
total_score: 10/60
bde527b
Sat Mar 28 07:44:14 PM UTC 2026: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 20/60
dc26b25
Sat Mar 28 07:47:27 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   48 |     return lista->head->data;
      |            ^~~~~
      |            list
list.c:48:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
4611ee3
Sat Mar 28 07:47:35 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7dbd160
Sat Mar 28 07:48:59 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:12: error: dereferencing ‘void *’ pointer [-Werror]
   48 |     return *(list->head->data);
      |            ^~~~~~~~~~~~~~~~~~~
list.c:48:12: error: void value not ignored as it ought to be
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
5d654ec
Sat Mar 28 07:49:11 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fc0fa46
Sat Mar 28 07:50:22 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/60
acbfad0
Sat Mar 28 07:52:19 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
c78c614
Sat Mar 28 07:55:28 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
2c90c0a
Sat Mar 28 07:59:45 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|3
total_score: 30/60
6ad7028
Sat Mar 28 08:00:24 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:47:8: error: expected ‘(’ before ‘if’
   47 |     if if (list->head != NULL) {
      |        ^~
      |        (
32f8904
Sat Mar 28 08:00:25 PM UTC 2026: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  6|3
total_score: 30/60
4977b59
Sat Mar 28 08:01:03 PM UTC 2026: 
 tests:  6|3
total_score: 30/60
cf59ed3
Sat Mar 28 08:02:23 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|3
total_score: 30/60
b776619
Sat Mar 28 08:03:09 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  10|2
total_score: 40/60
b4570e9
Sat Mar 28 08:06:18 PM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:100:11: error: unused variable ‘newNode’ [-Werror=unused-variable]
  100 |     Node* newNode = createNode(data);
      |           ^~~~~~~
cc1: all warnings being treated as errors
79b602e
Sat Mar 28 08:08:57 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
7f04509
Sat Mar 28 08:12:01 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 40/60
7b225b0
Sat Mar 28 08:13:07 PM UTC 2026: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 50/60
9c4bb54
Sat Mar 28 08:15:23 PM UTC 2026: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
fadfed7
Sat Mar 28 08:16:25 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 50/60
ac8d61a
Sat Mar 28 08:17:10 PM UTC 2026: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
test.c: In function ‘pushFront’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:171:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  171 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:131:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  131 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:100:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
  100 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
41f5253
Sat Mar 28 08:17:14 PM UTC 2026: 
Compilation failed
test.c: In function ‘pushFront’:
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
test.c: At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:171:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
  171 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:131:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
  131 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:100:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
  100 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
27540ca
